fixing bug adding product to cart from product detail page, reorganaizing cart structure and adding skeleton to load the internal components, reducing the initial load. Stylizing and stylizing cart footer

--- a/frontend/src/components/Cart/index.css
+++ b/frontend/src/components/Cart/index.css
@@ -7,18 +7,13 @@
     justify-content: center;
 }
 
-.show-cart-button svg{
-    cursor: pointer;
-}
-
 .empty-cart-message{
-    width: 200px;
     margin: 0 auto;
     text-align: center;
-    background-color:rgba(128, 128, 128, 0.486);
     font-size: 18px;
     border-radius: 5px;
     padding:10px;
+    font-family: 'Poppins-Regular';
 }
 
 .cart-products-cont{
@@ -64,56 +59,3 @@
     overflow-x: hidden!important;
 }
 
-.cart-delivery-info-container{
-    width: 100%;
-    margin-top:20px;
-    display: flex;
-    align-items: center;
-    justify-content:center;
-}
-
-.cart-action-buttons{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    gap:20px;
-    background-color: white;
-    padding: 1.5rem;
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
-.cart-action-buttons button{
-    border: 1px solid black;
-}
-
-.cart-action-buttons button:first-child{
-    margin-right: auto;
-}
-
-.cart-action-buttons button/*:last-child*/{
-    background-color: #545454;
-    color: white;
-    border: 0;
-}
-.cart-action-buttons button i{
- margin-right: 5px;
-}
-
-
-/*Mobile*/
-@media (max-width: 600px) {
-    .cart-action-buttons{
-        flex-direction: column;
-        align-items: flex-end;
-    }
-    .cart-action-buttons button{
-        display: none;
-    }
-    .cart-action-buttons button:last-child{
-        display: block;
-    }
-}
