--- a/frontend/src/components/Cart/ProductsCartGrid/index.css
+++ b/frontend/src/components/Cart/ProductsCartGrid/index.css
@@ -2,45 +2,44 @@
     width: 100%;
     height: 100%;
     min-height: 280px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
-    grid-template-rows: auto;
+    display: flex;
+    flex-direction: column;
     gap:10px;
     padding-bottom: 50px;
     margin: 0 auto;
 }
 
 .products-cart-grid-card{
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
+    width: 500px;
+    height: 150px;
+    display: grid;
+    grid-template-columns: 100px 1fr 1fr;
     justify-content: center;
     background-color: #fff;
     box-shadow: 2px 5px 5px rgb(202, 201, 201);
     border-radius: 5px;
     padding: 10px;
-    gap:5px;
+    gap:10px;
     position: relative;
     margin:0 auto;
 
 }
 
-.products-cart-grid header{
+.products-cart-grid-card header{
     width: 100%;
-    height: 40%;
+    height: 100%;
     border-radius:3px;
 }
-.products-cart-grid .remove-product-from-cart-grid-view {
+.products-cart-grid-card .remove-product-from-cart {
     width: 25px;
     position: absolute;
-    top: 0;
-    right:2px;
+    top: 10px;
+    right:10px;
     border: 0;
     background-color: #fff;
 }
 
-.products-cart-grid header img{
+.products-cart-grid-card header img{
     width: 100%;
     height: 100%;
     object-fit: contain;
@@ -48,30 +47,28 @@
     background-blend-mode: multiply;
     border-radius:3px
 }
-.products-cart-grid section{
+.products-cart-grid-card section{
     width: 100%;
-    height: 40%;
-    display: grid;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-.products-cart-grid section p{
+.products-cart-grid-card section p{
     margin: 0;
     width: 100%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-.products-cart-grid section div{
-    font-size: 14px;
-}
 
-.products-cart-grid section h4{
+.products-cart-grid-card section h4{
     margin: 0;
-    text-align: center;
 }
 
-.products-cart-grid footer{
+.products-cart-grid-card footer{
     width: 100%;
-    height: 10%;
+    height: 100%;
     display: flex;
     justify-content: center;
 }
