--- a/frontend/src/components/Cart/ProductQuantityController/index.css
+++ b/frontend/src/components/Cart/ProductQuantityController/index.css
@@ -6,20 +6,20 @@
 }
 
 .product-quantity-controller button{
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    border-radius: 3px;
-    border: 1px solid gray;
-    background-color: transparent;
-}
-.product-quantity-controller button:last-child{
-    padding: 1.5px;
+    border: 0;
+    border-radius: 100%;
+    background-color: rgba(180, 180, 180, 0.50);
 }
 
-.product-quantity-controller button img{
-    width: 14px;
+@media (max-width:500px){
+    .product-quantity-controller button{
+        width: 25px;
+        height: 25px;
+    }
 }
