--- a/frontend/src/components/Cart/ProductsCartGrid/index.css
+++ b/frontend/src/components/Cart/ProductsCartGrid/index.css
@@ -5,54 +5,57 @@
     display: flex;
     flex-direction: column;
     gap:10px;
-    padding-bottom: 50px;
     margin: 0 auto;
 }
 
 .products-cart-grid-card{
-    width: 500px;
-    height: 150px;
+    width: 95%;
+    height: 100px;
     display: grid;
-    grid-template-columns: 100px 1fr 1fr;
+    grid-template-columns: 60px 150px 1fr;
     justify-content: center;
+    align-items: center;
     background-color: #fff;
-    box-shadow: 2px 5px 5px rgb(202, 201, 201);
-    border-radius: 5px;
-    padding: 10px;
-    gap:10px;
+    box-shadow: 2px 5px 5px rgba(202, 201, 201, 0.648);
+    padding: 5px 20px 5px 5px;
+    border-radius: 10px;
+    gap:20px;
     position: relative;
     margin:0 auto;
 
 }
 
-.products-cart-grid-card header{
-    width: 100%;
-    height: 100%;
-    border-radius:3px;
-}
 .products-cart-grid-card .remove-product-from-cart {
     width: 25px;
     position: absolute;
     top: 10px;
-    right:10px;
+    right:20px;
     border: 0;
     background-color: #fff;
+}
+
+.products-cart-grid-card header{
+    width: 100%;
+    height: 95%;
+    border-radius: 8px;
 }
 
 .products-cart-grid-card header img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     mix-blend-mode: multiply;
     background-blend-mode: multiply;
-    border-radius:3px
+    border-radius:8px
 }
 .products-cart-grid-card section{
     width: 100%;
-    height: 100%;
+    height: 80%;
+    align-self: flex-start;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-top: 5px;
 }
 .products-cart-grid-card section p{
     margin: 0;
@@ -60,16 +63,55 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+
+    color: #000000bd;
+    font-family: "Poppins-Regular";
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 1.4px;
 }
 
 .products-cart-grid-card section h4{
     margin: 0;
+    font-size: 18px;
+    font-family: 'Poppins-Regular';
 }
 
 .products-cart-grid-card footer{
     width: 100%;
-    height: 100%;
+    height: 70%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 
+@media (max-width:500px){
+    .products-cart-grid-card{
+        height: 100px;
+        width: 100%;
+        grid-template-columns: 60px 100px 1fr;
+        gap:10px
+    }
+    .products-cart-grid-card header{
+        height: 100%;
+    }
+
+    .products-cart-grid-card section{
+       padding-top: 15px;
+    }
+
+    .products-cart-grid-card section p{
+        font-size: 15px;
+    }
+
+    .products-cart-grid-card .remove-product-from-cart {
+        top: 5px;
+        right: 10px;
+    }
+
+    .products-cart-grid-card .remove-product-from-cart svg{
+        width: 20px;
+        height: 20px;
+    }
+    
+}
