--- a/frontend/src/components/Cart/index.css
+++ b/frontend/src/components/Cart/index.css
@@ -41,18 +41,26 @@
 .cart-modal-content{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap:20px;
     overflow: hidden;
     padding: 0;
-    padding-bottom: 1rem;
 }
 
 .cart-modal-content .table-grid-container{
     width: 100%;
     overflow-y: auto;
-    padding: 1.5rem;
+    padding: 0.5rem;
 }
+
+/*Scrollbar styles*/
+.cart-modal-content .table-grid-container::-webkit-scrollbar{ 
+    background-color: transparent;
+    width: 10px;
+}
+.cart-modal-content .table-grid-container::-webkit-scrollbar-thumb {
+    background-color: #00000060; 
+    border-radius: 20px;
+    border: 3px solid #fff;
+}
+
 
 
