--- a/frontend/src/store_pages/pagesStyles/ProductDetail.css
+++ b/frontend/src/store_pages/pagesStyles/ProductDetail.css
@@ -17,3 +17,9 @@
         margin-left: 2%;
     }
 }
+
+@media (max-width:500px) {
+    .product-detail-page .product-detail-page-button-go-back{
+        position: absolute;
+    }
+}
