--- a/frontend/src/components/Cart/index.css
+++ b/frontend/src/components/Cart/index.css
@@ -13,6 +13,7 @@
     font-size: 18px;
     border-radius: 5px;
     padding:10px;
+    padding-bottom: 50px;
     font-family: 'Poppins-Regular';
 }
 
