adding message in management pages to say that the changes will take 5 minutes in being visible

--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ManagmentProductsPageHeader/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ManagmentProductsPageHeader/index.css
@@ -1,13 +1,24 @@
-.back-button-title-container{
+.products-management-page-header{
     width: 90%;
     height: auto;
     display: flex;
-    flex-direction: row;
-    gap:20px;
-    align-items: center;
+    flex-direction: column;
+    gap:10px;
     padding: 10px;
     padding-left: 0;
-    margin: 0 auto
+    margin: 0 auto;
+    margin-bottom: 10px;
+}
+
+.back-button-title-container{
+    width: fit-content;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap:20px;
+    padding: 10px;
+    padding-left: 0;
 }
 
 .products-management-go-back-button{
@@ -28,10 +39,14 @@
     text-align: center;
     font-family: 'Noto Sans';
     font-size: 30px;
-    font-style: normal;
     font-weight: 600;
     line-height: 137%; /* 54.8px */
     font-variant: small-caps;
     letter-spacing: -0.8px;
     margin:0;
+}
+
+.products-management-page-header span{
+    font-family: 'Poppins-Regular';
+    font-size: 14px;
 }
