--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
@@ -42,7 +42,7 @@
 
 .product-management-card{
     width: 100%;
-    height: 250px;   
+    height: 270px;   
     background-color: #fff;
     box-shadow: 2px 5px 10px rgb(202, 201, 201);
     border-radius: 5px;
@@ -50,6 +50,13 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    padding-bottom: 10px;
+}
+
+.product-management-card .product-id{
+    font-size: 14px;
+    color: #000;
+    font-family: "Poppins-Regular";
 }
 
 .product-management-card .img-container {
