--- a/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
+++ b/frontend/src/components/ManagmentComponents/ProductsManagementComponents/ProductsGrid/index.css
@@ -61,7 +61,8 @@
 
 .product-management-card .img-container {
     width: 100%;
-    height: 60%;
+    min-height: 60%;
+    max-height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
