fixing bug: selecting category and promotion at the same time when they have the same id on categories sider, adding a quit active filter button to categories slider, evoid showing no recommended products message qhen loading or error and adjusting categories grid to desktop on homepage

--- a/frontend/src/components/NavBar/CategoriePromotionSlider/index.css
+++ b/frontend/src/components/NavBar/CategoriePromotionSlider/index.css
@@ -12,12 +12,15 @@
   flex-direction: row;
   gap: 10px;
   overflow-x: auto;
-  padding: 5px 5px 20px 5px;
+  padding: 10px 5px 20px 5px;
   font-family: "Poppins-Regular";
 }
 
 .categories-side-bar ul::-webkit-scrollbar {
   display: none;
+}
+.categories-side-bar ul li{
+  position: relative;
 }
 
 .categories-side-bar li span {
@@ -30,6 +33,17 @@
   white-space: nowrap;
 }
 
-.category-selected span {
+.item-selected span {
   outline: 1px solid;
+}
+
+.quit-active-item-button{
+  width: 24px;
+  height: 24px;
+  border: 0;
+  padding: 0;
+  position: absolute;
+  right: -5px;
+  top:-10px;
+  border-radius: 100%;
 }
