--- a/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
+++ b/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
@@ -27,12 +27,12 @@
 }
 
 .homepage-categories-grid{
-    width: 100%;
+    width: 90%;
     height: 100%;
     display:grid;
     grid-template-columns: repeat(auto-fill, 160px);
     gap: 20px 60px;
-    justify-content: center;
+    justify-content: flex-start;
     margin:0 auto;
     padding:10px;
 }
@@ -66,7 +66,9 @@
 @media (min-width: 400px) and (max-width:680px){
     .homepage-categories-grid{
         grid-template-columns: repeat(auto-fill, 130px);
-        gap: 10px 30px
+        gap: 10px 30px;
+        width: 100%;
+        justify-content: center;
     }
     .homepage-categories-grid a{
         height: 160px;
@@ -80,7 +82,9 @@
 @media (max-width:400px){
     .homepage-categories-grid{
         grid-template-columns: repeat(auto-fill, 130px);
-        gap: 5px 15px
+        gap: 5px 15px;
+        width: 100%;
+        justify-content: center;
     }
     .homepage-categories-grid a{
         height: 170px;
