aligning back button with product title on mobile mode and adding margin top to produc tdetail section to evoid overlaying with navbar

--- a/frontend/src/components/ProductDetailPageComponents/ProductDetailsSection/index.css
+++ b/frontend/src/components/ProductDetailPageComponents/ProductDetailsSection/index.css
@@ -172,6 +172,7 @@
 @media (max-width: 500px){
     .product-details-section{
         padding: 0 20px 20px 20px;
+        margin-top: 20px;
     }
     .product-details-section > aside{
         width: 100%;
