--- a/frontend/src/store_pages/pagesStyles/ProductDetail.css
+++ b/frontend/src/store_pages/pagesStyles/ProductDetail.css
@@ -21,5 +21,6 @@
 @media (max-width:500px) {
     .product-detail-page .product-detail-page-button-go-back{
         position: absolute;
+        margin-top: 20px;
     }
 }
