--- a/frontend/src/components/Footer/index.css
+++ b/frontend/src/components/Footer/index.css
@@ -1,9 +1,11 @@
 .footer{
-    height:150px;
+    min-height:150px;
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    gap:10px;
     text-align: center;
-    justify-content: center;
     padding:10px;
     background-color: #74334B;
     color: #fff;
@@ -11,3 +13,35 @@
     font-weight: 400;
     line-height: 125%; 
 }
+
+.footer .social-networks{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+}
+
+.footer .contact-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
+}
+
+.footer footer{
+    margin-top: 30px;
+}
+
+.social-networks-and-contact-container{
+    display: flex;
+    flex-direction: row;
+    gap:50px
+}
+
+@media (max-width:500px) {
+    .social-networks-and-contact-container{
+        flex-direction: column;
+        gap:10px
+    }
+}
+
