adding meta description and keywords to improve SEO

--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,23 +1,92 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" type="image/svg+xml" href="/Logo.webp" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Esther Store</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Esther Store, Transforma tu closet con prendas elegantes y sofisticadas. Nuestra tienda esta diseñada para ayudarte a encontrar todo lo que buscas de forma accesible y eficaz."
+    />
+    <meta
+      name="keywords"
+      content="
+			Tienda de ropa en línea, 
+			Moda online, 
+			Ropa de mujer, 
+			Ropa de hombre, 
+			Ropa infantil, 
+			Accesorios de moda, 
+			Tendencias de moda, 
+			Ropa casual, 
+			Ropa formal, 
+			Ropa deportiva, 
+			Zapatos, 
+			Bolsos, 
+			Joyería, 
+			Ofertas de ropa, 
+			Envío gratis, 
+			Devoluciones fáciles, 
+			Tallas grandes, 
+			Ropa sostenible, 
+			Marcas de moda, 
+			Outlet online, 
+			Colección de temporada, 
+			Asesoramiento de estilo, 
+			Compra segura online, 
+			Atención al cliente, 
+			Pago seguro, 
+			Moda rápida, 
+			Looks completos, 
+			Ropa de diseñador, 
+			Moda ética, 
+			Personalización de ropa,
+
+			Online clothing store, 
+			Online fashion, 
+			Women's clothing, 
+			Men's clothing, 
+			Kids' clothing, 
+			Fashion accessories, 
+			Fashion trends, 
+			Casual wear, 
+			Formal wear, 
+			Sportswear, 
+			Shoes, 
+			Bags, 
+			Jewelry, 
+			Clothing deals, 
+			Free shipping, 
+			Easy returns, 
+			Plus sizes, 
+			Sustainable clothing, 
+			Fashion brands, 
+			Online outlet, 
+			Seasonal collection, 
+			Style advice, 
+			Secure online shopping, 
+			Customer service, 
+			Secure payment, 
+			Fast fashion, 
+			Complete looks, 
+			Designer clothing, 
+			Ethical fashion, 
+			Customized clothing"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/Logo.webp" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Esther Store</title>
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+  }
 </style>
