--- a/frontend/src/components/NavBar/index.css
+++ b/frontend/src/components/NavBar/index.css
@@ -39,6 +39,7 @@
   color: #313131;
   font-family: "Poppins-Regular";
   font-size: 16px;
+  cursor: pointer;
 }
 
 .navbar .navbar-promotions-container{
