--- a/frontend/src/components/NavBar/CategoriesDropdown/index.css
+++ b/frontend/src/components/NavBar/CategoriesDropdown/index.css
@@ -21,6 +21,9 @@
     font-family: "Poppins-Regular";
     font-size: 17px;
     font-weight: 400;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 130px;
 }
 .navbar-categories-dropdown span{
     color: black;
