--- a/frontend/src/components/NavBar/PromotionsDropdown/index.css
+++ b/frontend/src/components/NavBar/PromotionsDropdown/index.css
@@ -22,6 +22,9 @@
     font-family: "Poppins-Regular";
     font-size: 17px;
     font-weight: 400;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 140px;
 }
 .navbar-promotions-dropdown .p-dropdown-trigger{
     width: 1rem;
