--- a/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
+++ b/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
@@ -32,6 +32,11 @@
     align-items: top;
     justify-content: center;
   }
+
+.img-container a{
+  width: 100%;
+  height: 100%;
+}
   
 .img-container img{
     width: 100%;
