--- a/frontend/src/components/RetryQueryComponent/index.css
+++ b/frontend/src/components/RetryQueryComponent/index.css
@@ -17,7 +17,7 @@
 .retry-query-component button{
     padding: 10px 15px 10px 15px;
     border-radius: 20px;
-    background-color: #D9658F;
+    background-color: #d763aeff;
     color:#fff;
     border:0
 }
