--- a/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
+++ b/frontend/src/components/HomePageComponents/CategoriesGrid/index.css
@@ -12,18 +12,10 @@
     color: #000;
     font-family: "Poppins-Medium";
     font-size: 25px;
-    letter-spacing: 1.5px;
-    opacity: 0.5;
-    margin:0
-}
-
-.homepage-categories-grid-container header h3{
-    color: #D9658F;
-    font-family: "Poppins-Regular";
-    font-size: 20px;
-    letter-spacing: 1.25px;
-    opacity: 0.8;
-    margin-top: 10px;
+    margin:0;
+    color: #d763aeff;
+    white-space: nowrap;
+    text-align: center;
 }
 
 .homepage-categories-grid{
@@ -49,6 +41,8 @@
     width: 100%;
     height: 70%;
     object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.21);
 }
 
 .homepage-categories-grid a div{
@@ -59,7 +53,6 @@
     color: #000;
     font-family: "Poppins-Regular";
     font-size: 16px;
-    letter-spacing: 2px;
     opacity: 0.8;
 }
 
@@ -77,6 +70,10 @@
     .homepage-categories-grid a div{
         font-size: 14px;
     }
+    .homepage-categories-grid-container header h1{
+        font-size: 20px;
+        text-align: center;
+    }
 }
 
 @media (max-width:400px){
@@ -91,5 +88,9 @@
     }
     .homepage-categories-grid a div{
         font-size: 14px;
+    }
+    .homepage-categories-grid-container header h1{
+        font-size: 20px;
+        text-align: center;
     }
 }
