--- a/frontend/src/components/HomePageComponents/Hero/index.css
+++ b/frontend/src/components/HomePageComponents/Hero/index.css
@@ -20,11 +20,10 @@
 }
 
 .homepage-hero-section main h1{
-    color: #D9658F;
-    font-family: "Lora-Medium";
+    color: #d763aeff;
+    font-family: "Poppins-Medium";
     font-size: 40px;
-    letter-spacing: 2.5px;
-    opacity: 0.8;
+    opacity: 1;
     margin:0
 }
 
@@ -42,28 +41,21 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    gap:50px
+    gap:50px;
 }
 
 .homepage-hero-section main footer a:first-child{
-    background-color: #D9658F;
+    background-color: #d763aeff;
+    width: 100%;
     border:0;
-    color:#fff;
-    font-family: "Poppins-Regular";
-    font-size: 16px;
     padding: 18px 40px 18px 40px;
     transition: box-shadow 0.3s linear;
+    text-align: center;
     text-wrap: nowrap;
 }
 
 .homepage-hero-section main footer a:first-child:hover{
     box-shadow: 0px 0px 20px 0px #D9658F;
-}
-
-.homepage-hero-section main footer a:last-child{
-    color: #000;
-    font-family: "Poppins-Regular";
-    font-size: 16px;
 }
 
 .homepage-hero-section aside{
@@ -122,8 +114,8 @@
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
         grid-template-areas: 
-        "aside"
         "main"
+        "aside"
         ;
         gap:50px;
         padding: 15px;
@@ -134,17 +126,21 @@
         gap:20px
     }
     .homepage-hero-section aside{
+        display: none;
         max-width: 93%;
         justify-self: center;
     }
 }
 
 @media (max-width:500px) {
+    .homepage-hero-section{
+        padding-left: 0;
+    }
     .homepage-hero-section main{
-        gap:20px
+        gap:0px;
     }
     .homepage-hero-section main h1{
-        font-size: 30px;
+        font-size: 25px;
     }
     .homepage-hero-section main footer a:first-child{
         font-size: 14px;
