--- a/frontend/src/components/HomePageComponents/Promotions/index.css
+++ b/frontend/src/components/HomePageComponents/Promotions/index.css
@@ -11,9 +11,8 @@
 .homepage-promotions-section > h1{
     text-align: center;
     color: #000;
-    font-family: "Poppins-Regular";
+    font-family: "Poppins-Medium";
     font-size: 25px;
-    letter-spacing: 1.5px;
     opacity: 0.58;
     margin: 0;
 }
