--- a/frontend/src/components/NavBar/CategoriePromotionSlider/index.css
+++ b/frontend/src/components/NavBar/CategoriePromotionSlider/index.css
@@ -12,8 +12,10 @@
   flex-direction: row;
   gap: 10px;
   overflow-x: auto;
-  padding: 10px 5px 20px 5px;
+  padding: 0px 5px 10px 0px;
   font-family: "Poppins-Regular";
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .categories-side-bar ul::-webkit-scrollbar {
@@ -25,16 +27,23 @@
 
 .categories-side-bar li span {
   cursor: pointer;
-  padding: 5px;
-  border-radius: 5px;
+  border-radius: 10px;
   min-width: 100px;
   display: inline-block;
   color: #000;
   white-space: nowrap;
+  
 }
 
 .item-selected span {
-  outline: 1px solid;
+  padding: 5px;
+  padding-right: 30px;
+  background-color: rgba(215, 99, 174, 0.558);
+}
+
+.item-no-selected span{
+  padding: 5px;
+  background-color: rgba(128, 128, 128, 0.105);
 }
 
 .quit-active-item-button{
@@ -43,7 +52,9 @@
   border: 0;
   padding: 0;
   position: absolute;
-  right: -5px;
-  top:-10px;
+  right: 3px;
+  top:50%;
+  transform: translate(0%, -50%);
   border-radius: 100%;
+  background-color: transparent;
 }
