--- a/frontend/src/components/Search/index.css
+++ b/frontend/src/components/Search/index.css
@@ -1,6 +1,6 @@
 .search-form{
     width: 100%;
-    height: 30px;
+    height: 40px;
     display:flex;
     flex-direction: row;
     align-items: center;
@@ -15,8 +15,10 @@
     width: 100%;
     border:0;
     background-color: transparent;
-    opacity: 0.6;
+    opacity: 1;
     font-family: 'Poppins-Medium';
+    font-size: 15px;
+    padding-left: 10px;
 }
 
 .search-form input:focus{
