--- a/frontend/src/components/ProductDetailPageComponents/SimilarProductsSection/index.css
+++ b/frontend/src/components/ProductDetailPageComponents/SimilarProductsSection/index.css
@@ -37,6 +37,8 @@
     }
 
     .similar-products-section > header h1{
-        font-size: 25px;
+        font-size: 20px;
+        font-weight: 700;
+        color: #d763aeff;
     }
 }
