--- a/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
+++ b/frontend/src/components/StorePageComponents/ProductsGrid/ProductCard/index.css
@@ -76,6 +76,7 @@
   font-size: 16px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   font-family: 'Poppins-Regular';
   opacity: 0.8;
 }
